--- a/_posts/2023-05-08-mac.md
+++ b/_posts/2023-05-08-mac.md
@@ -1,15 +1,12 @@
 ---
 layout: post
-title: Windows 实用技巧汇总
-categories: Windows
-description: 平时使用 Windows 时总结的一些实用的小技巧。
-keywords: Windows, Skill
+title: Mac Install Software
+categories: Mac
+description: 平时使用 Mac 时总结的一些实用的小技巧。
+keywords: Mac, Skill
 ---
 
-**目录**
-
-- TOC
-  {:toc}
+使用 Mac 电脑安装软件时不时遇到问题，我将它们以及对应的解决方案逐渐整理归纳，汇总到这一篇帖子里。
 
 # Mac Pro M1
 
